george-33d: merged in branches/george-33c -r2923:HEAD